# odins-eye

./: LICENSE  README.md  app.py  pyproject.toml
sensors/: sensor.py  temperature_sensor.py
